--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="content">
         <header>
           <h2>Trả lời hộ bố nhá</h2>
-          <h4>k trả lời làm chó nha:v </h4>
+          <h4>k trả lời làm chó nhá:v </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg"> </button>
         <button id="no" type="button" class="btn btn-info btn-lg">đéo </button>
