--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2>Trả lời hộ bố nhá</h2>
-          <h4>k trả lời làm chó nhá:v </h4>
+          <h2>hihihih</h2>
+          <h4>kjkjkjkj  </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg"> </button>
         <button id="no" type="button" class="btn btn-info btn-lg">đéo </button>
